# diploma_work

./: .ENV  .dockerignore  .gitignore  Dockerfile  PROJECT_STRUCTURE_PROMPT.md  README.md  auth.py  chapter3_engineering_meros_ai.md  config.py  database.py  docker-compose.yml  main.py  parser.py  pyproject.toml  schema.dbml  search.py  splitter.py
docs/: cloudflare-origin-ssl.md
nginx/conf.d/: meros-ai.conf
routers/: auth.py  dependencies.py  documents.py  pages.py  schemas.py  search.py  tools.py
scripts/: install_cloudflare_origin_cert.sh  retry_failed_documents.py
services/: ai_log_service.py  auth_service.py  chunk_service.py  document_parser_service.py  document_service.py  embedding_service.py  summary_service.py  tools_service.py  vector_search_service.py
services/search/: __init__.py  base.py  paragraph.py  phrase.py  sentence.py  word.py
web/: admin.html  index.html  login.html  register.html  viewer.html
web/static/: admin.js  app.js  auth.js  login.js  register.js  styles.css  viewer.js
