[project]
name = "book-processor"
version = "0.1.0"
description = "Simple API service for uploading, parsing and searching PDF and DOCX books."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "pypdf>=5.0.0,<6.0.0",
  "python-docx>=1.1.0,<2.0.0",
  "PyMySQL>=1.1.0,<2.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "parser", "splitter", "database", "search", "auth"]
